--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <label for="Branch">Branch : </label>
             <select name="Branch" id="Branch">
                 <option value="" selected disabled> select</option><br>
-                <option value="CSE AI-ML">cse ai-ml</option>
+                <option value="CSE AI-ML">CSE AI-ML</option>
                 <option value="MECHANICAL">MECHANICAL</option>
                 <option value="ELECTRONICS">ELECTRONICS</option>
                 <option value="ELECTRICAL">ELECTRICAL</option>
@@ -55,3 +55,4 @@
 </body>
 
 </html>
+
